test_src/compiler_errors/types/arithmetic/DecrementBoolError2.b
class DecrementBoolError2 {
    void test() {
        var value = true;
        println(--value);
    }
}
